# MojiOkoshi

./: .gitignore  MojiOkoshi.spec  MojiOkoshi_v3.spec  README.md  build_exe.py  create_dummy_audio.py  locate_packages.py  locate_whisper.py  main.py  manual_verify_ui.py  pyproject.toml  reproduce_no_diarization.py  test_formatting_logic.py  test_progressive_output.py  test_summarizer.py  test_transcriber_formatting_real.py  test_transcription.py
src/: app.py  config_manager.py  diarizer.py  ffmpeg_setup.py  gemini_summarizer.py  gui_utils.py  llm_summarizer.py  summarizer.py  transcriber.py
